Add metro.debugCompilerTests option